crates/jsonschema-codegen/tests/ui/invalid_ref_non_string.rs
#[jsonschema::validator(schema = r#"{"$ref":42}"#)]
struct Validator;

fn main() {}
